org.lflang.lfc/test/resources/org/lflang/lfc/tests/issue490.stderr
lfc: error: Name of main reactor must match the file name (or be omitted).
--> test/resources/org/lflang/lfc/tests/issue490.lf:4:14
  |
3 | target Python;
4 | main reactor R(p(3)) {
  |              ^ Name of main reactor must match the file name (or be omitted).
  |
5 |   state liss(2, 3);

lfc: error: missing '{=' at '{'
--> test/resources/org/lflang/lfc/tests/issue490.lf:6:22
  |
5 |   state liss(2, 3);
6 |   reaction (startup) {
  |                      ^ missing '{=' at '{'
  |
7 |     print(self.liss)

lfc: error: mismatched input '<EOF>' expecting '=}'
 --> test/resources/org/lflang/lfc/tests/issue490.lf:9:2
   |
 8 | }
   | >>>>>>>>>>>>>>
 9 | }
10 | 
   | < mismatched input '<EOF>' expecting '=}'
11 | 

