org.lflang.lfc/test/resources/org/lflang/lfc/tests/issue490.lf
# https://github.com/lf-lang/lingua-franca/issues/490
# issue is that one error ends at EOF
target Python;
main reactor R(p(3)) {
  state liss(2, 3);
  reaction (startup) {
    print(self.liss)
}
}
